appId: com.docash
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: 'Current balance'
    timeout: 60000
- tapOn: 'Expense'
- assertVisible: 'Note (optional)'
- tapOn: '1'
- tapOn: '0'
- tapOn: '0'
- assertVisible: '\$100\.00'
- tapOn:
    id: 'category-select'
- tapOn: 'Food'
- tapOn:
    id: 'entry-submit'
- extendedWaitUntil:
    visible: '-\$100\.00'
    timeout: 10000
- assertVisible: 'Food'
