appId: com.docash
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: 'Current balance'
    timeout: 60000
- tapOn:
    id: 'open-settings'
- assertVisible: 'Settings'
- tapOn: 'Appearance'
- assertVisible: 'Language'
- tapOn: 'Español'
- assertVisible: 'Apariencia'
